# RPN_Calculator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
GUI/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/: main.cpp
console/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: define.hpp
core/include/RPN/: RPN_Converter.hpp
core/include/Solver/: Solver.hpp
core/src/RPN/: RPN_Converter.cpp
core/src/Solver/: Solver.cpp
tests/: CMakeLists.txt
tests/RPN/: CMakeLists.txt  RPN_Converter_Test.cpp
tests/Solver/: CMakeLists.txt  Solver_Test.cpp
tests/Utils/: CMakeLists.txt  is_digit_test.cpp  is_not_digit_test.cpp  is_not_number_test.cpp  is_not_operation_test.cpp  is_number_test.cpp  is_operation_test.cpp  priority_test.cpp  token_type_test.cpp  validate_expr_test.cpp
